--- a/app/src/main/res/layout/activity_registro2.xml
+++ b/app/src/main/res/layout/activity_registro2.xml
@@ -48,11 +48,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumero"
         app:layout_constraintVertical_bias="0.363" />
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/editTextNumero"
         style="@style/texto"
         android:layout_width="215dp"
         android:layout_height="53dp"
