--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.LLegadaSegura" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.LLegadaSegura" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppTheme" parent="Theme.LLegadaSegura" />
     <style name="texto" >
         <item name="android:backgroundTint">@color/bittersweet</item>
         <item name="android:radius">20dp</item>
