--- a/app/src/main/res/layout/activity_registro4.xml
+++ b/app/src/main/res/layout/activity_registro4.xml
@@ -12,7 +12,7 @@
         style="@style/texto"
         android:layout_width="219dp"
         android:layout_height="50dp"
-        android:text="¿Cuál es tu correo electrónico?"
+        android:text="¿Cuál es su correo?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,12 +63,14 @@
         style="@style/texto"
         android:layout_width="215dp"
         android:layout_height="53dp"
-        android:hint="Ingrese su correo"
-        android:inputType="textWebEmailAddress"
+        android:hint="Ingrese su contraseña"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.37" />
+        app:layout_constraintVertical_bias="0.37"
+        app:passwordToggleEnabled = "true"
+        app:passwordToggleTint="@color/teal_200" />
 </androidx.constraintlayout.widget.ConstraintLayout>
