--- a/app/src/main/res/layout/activity_grupos.xml
+++ b/app/src/main/res/layout/activity_grupos.xml
@@ -4,12 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".grupo.Grupos">
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGrupos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible" />
+
+    <Button
+        android:id="@+id/nuevoGrupoBoton"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nuevo Grupo"
+        android:layout_gravity="right|bottom"
+        android:layout_margin="60dp" />
 
 </FrameLayout>
