--- a/app/src/main/res/layout/activity_grupos_create.xml
+++ b/app/src/main/res/layout/activity_grupos_create.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.032" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextNombreGrupo"
         style="@style/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
         app:layout_constraintVertical_bias="0.591" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextRol"
         style="@style/texto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
         app:layout_constraintVertical_bias="0.235" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnContinuar"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:background="@drawable/boton_redondo"
