--- a/app/src/main/res/layout/item_grupo.xml
+++ b/app/src/main/res/layout/item_grupo.xml
@@ -1,44 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:background="@color/gunmetal"
     >
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/nombreGrupo"
-            style="@style/texto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4sp"
-            android:fontFamily="@font/concert_one"
-            android:textSize="40sp"
-            tools:text="Nombre" />
+        android:layout_marginStart="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/rolGrupo"
             style="@style/texto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4sp"
+            android:layout_marginStart="56dp"
             android:fontFamily="@font/concert_one"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imagenGrupo"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Rol" />
+
+        <TextView
+            android:id="@+id/nombreGrupo"
+            style="@style/texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/concert_one"
+            android:textSize="40sp"
+            app:layout_constraintStart_toEndOf="@+id/imagenGrupo"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Nombre" />
 
         <TextView
             android:id="@+id/descripcionGrupo"
             style="@style/texto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4sp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="92dp"
             android:fontFamily="@font/concert_one"
+            app:layout_constraintStart_toEndOf="@+id/imagenGrupo"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Desc" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/imagenGrupo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="28dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.32"
+            app:srcCompat="@drawable/ic_familia"
+            android:contentDescription="ImagenDeGrupo" />
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
