--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,8 +35,8 @@
     <EditText
         android:id="@+id/editTextCorreo"
         style="@style/texto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="259dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="Ingresa tu correo"
         android:inputType="textWebEmailAddress"
