--- a/app/src/main/res/layout/activity_terminos_result.xml
+++ b/app/src/main/res/layout/activity_terminos_result.xml
@@ -7,6 +7,36 @@
     android:background="@color/gunmetal"
     tools:context=".utils.TerminosResultActivity">
 
+
+    <ScrollView
+
+        android:layout_width="368dp"
+        android:layout_height="570dp"
+        android:scrollbars="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.627"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.366"
+        tools:ignore="MissingConstraints">
+
+
+        <com.codesgood.views.JustifiedTextView
+            android:id="@+id/textViewTerminos"
+            android:layout_width="350dp"
+            android:layout_height="550dp"
+            android:textColor="@color/mint_cream"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">
+
+        </com.codesgood.views.JustifiedTextView>
+
+    </ScrollView>
+
     <Button
         android:id="@+id/btnAceptar"
         android:layout_width="wrap_content"
@@ -30,5 +60,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.934" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="TERMINOS Y CONDICIONES"
+        android:textColor="@color/mint_cream"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
