--- a/app/src/main/res/layout/cuenta_configuracion.xml
+++ b/app/src/main/res/layout/cuenta_configuracion.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/imgFoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_width="225dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -20,9 +20,10 @@
         android:id="@+id/btnFoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="8dp"
         android:text="Agregar/ Cambiar foto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgFoto" />
 
@@ -59,7 +60,7 @@
     <TextView
         android:id="@+id/txtNombre"
         android:layout_width="123dp"
-        android:layout_height="16dp"
+        android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="64dp"
         android:text="TextView"
@@ -71,7 +72,7 @@
     <TextView
         android:id="@+id/txtApellido"
         android:layout_width="123dp"
-        android:layout_height="16dp"
+        android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="108dp"
         android:text="TextView"
@@ -83,7 +84,7 @@
     <TextView
         android:id="@+id/txtNumero"
         android:layout_width="123dp"
-        android:layout_height="16dp"
+        android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="152dp"
         android:text="TextView"
@@ -96,10 +97,21 @@
         android:id="@+id/btnEditarDatos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="220dp"
         android:text="Editar datos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.794"
+        app:layout_constraintHorizontal_bias="0.795"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
+
+    <Button
+        android:id="@+id/btnSubir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Subir"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
