--- a/app/src/main/res/layout/cuenta_configuracion.xml
+++ b/app/src/main/res/layout/cuenta_configuracion.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/gunmetal"
     android:layout_height="match_parent">
 
     <ImageView
@@ -29,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imgFoto" />
 
     <TextView
+        style="@style/texto"
         android:id="@+id/textView17"
         android:layout_width="84dp"
         android:layout_height="26dp"
@@ -36,10 +38,13 @@
         android:layout_marginTop="64dp"
         android:text="Nombre: "
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
 
     <TextView
+        style="@style/texto"
+        android:textStyle="bold"
         android:id="@+id/textView19"
         android:layout_width="85dp"
         android:layout_height="26dp"
@@ -51,6 +56,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
+        style="@style/texto"
+        android:textStyle="bold"
         android:id="@+id/textView21"
         android:layout_width="86dp"
         android:layout_height="26dp"
@@ -61,35 +68,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
-    <TextView
+    <EditText
+
         android:id="@+id/txtNombre"
-        android:layout_width="195dp"
+        android:maxLines="1"
+        style="@style/texto"
+        android:layout_width="198dp"
         android:layout_height="26dp"
         android:layout_marginTop="64dp"
-        android:text="TextView"
+        android:background="@android:color/transparent"
+        android:text=""
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:textSize="20dp"
+        app:hintTextAppearance = "@style/texto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
 
-    <TextView
+    <EditText
+        android:background="@android:color/transparent"
+        style="@style/texto"
+        android:maxLines="1"
         android:id="@+id/txtApellido"
         android:layout_width="196dp"
         android:layout_height="26dp"
         android:layout_marginTop="4dp"
-        android:text="TextView"
+        android:text=""
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:textSize="20dp"
+        app:hintTextAppearance = "@style/texto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView19"
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
-    <TextView
+    <EditText
+        android:background="@android:color/transparent"
+        style="@style/texto"
         android:id="@+id/txtNumero"
         android:layout_width="196dp"
         android:layout_height="26dp"
         android:layout_marginTop="124dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="20dp"
+        app:hintTextAppearance = "@style/texto"
+        android:clickable="false"
+        android:focusable="false"
+        android:maxLines="1"
+        android:focusableInTouchMode="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toEndOf="@+id/textView21"
@@ -100,7 +129,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="188dp"
-        android:text="Editar datos"
+
+        android:text="EDITAR DATOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.806"
         app:layout_constraintStart_toStartOf="parent"
