--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/concert_one"
         android:gravity="left|center"
-        android:text="Soporte"
+        android:text="Acerca de"
         android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
