--- a/app/src/main/res/layout/acerca_de.xml
+++ b/app/src/main/res/layout/acerca_de.xml
@@ -101,25 +101,19 @@
         android:id="@+id/imgFacebook"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="250dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toStartOf="@+id/imgTwitter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/facebook_logo_3_1" />
 
     <ImageView
         android:id="@+id/imgTwitter"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="260dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="88dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24"
-        app:layout_constraintVertical_bias="0.392"
+        app:layout_constraintTop_toTopOf="@+id/imgFacebook"
         app:srcCompat="@drawable/twitterlogo" />
 
     <TextView
