--- a/app/src/main/res/layout/activity_terminos_result.xml
+++ b/app/src/main/res/layout/activity_terminos_result.xml
@@ -10,8 +10,8 @@
 
     <ScrollView
 
-        android:layout_width="368dp"
-        android:layout_height="570dp"
+        android:layout_width="wrap_content"
+        android:layout_height="550dp"
         android:scrollbars="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +24,8 @@
 
         <com.codesgood.views.JustifiedTextView
             android:id="@+id/textViewTerminos"
-            android:layout_width="350dp"
-            android:layout_height="550dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="@color/mint_cream"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
@@ -62,6 +62,7 @@
         app:layout_constraintVertical_bias="0.934" />
 
     <EditText
+        android:background="@android:color/transparent"
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="43dp"
