--- a/app/src/main/res/layout/activity_terminos_resultinfo.xml
+++ b/app/src/main/res/layout/activity_terminos_resultinfo.xml
@@ -11,8 +11,8 @@
     <ScrollView
 
         android:id="@+id/scrollView2"
-        android:layout_width="368dp"
-        android:layout_height="570dp"
+        android:layout_width="wrap_content"
+        android:layout_height="550dp"
         android:scrollbars="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +25,8 @@
 
         <com.codesgood.views.JustifiedTextView
             android:id="@+id/textViewTerminos"
-            android:layout_width="350dp"
-            android:layout_height="550dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="@color/mint_cream"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
@@ -51,9 +51,10 @@
         app:layout_constraintVertical_bias="0.934" />
 
     <EditText
+        android:background="@android:color/transparent"
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
+        android:layout_height="50dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="TERMINOS Y CONDICIONES"
