--- a/app/src/main/res/layout/cuenta_configuracion.xml
+++ b/app/src/main/res/layout/cuenta_configuracion.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imgFoto"
-        android:layout_width="321dp"
-        android:layout_height="370dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="240dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="72dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/btnFoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:text="Agregar/ Cambiar foto"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,12 +29,12 @@
         app:layout_constraintTop_toBottomOf="@+id/imgFoto" />
 
     <TextView
-        style="@style/texto"
         android:id="@+id/textView17"
+        style="@style/texto"
         android:layout_width="84dp"
         android:layout_height="26dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="28dp"
         android:text="Nombre: "
         android:textSize="20dp"
         android:textStyle="bold"
@@ -70,19 +70,20 @@
     <EditText
 
         android:id="@+id/txtNombre"
-        android:maxLines="1"
         style="@style/texto"
         android:layout_width="198dp"
         android:layout_height="26dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="28dp"
         android:background="@android:color/transparent"
-        android:text=""
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:maxLines="1"
+        android:text=""
         android:textSize="20dp"
-        app:hintTextAppearance = "@style/texto"
+        app:hintTextAppearance="@style/texto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
 
@@ -105,19 +106,19 @@
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
     <EditText
-        android:background="@android:color/transparent"
-        style="@style/texto"
         android:id="@+id/txtNumero"
+        style="@style/texto"
         android:layout_width="196dp"
         android:layout_height="26dp"
-        android:layout_marginTop="124dp"
-        android:text=""
-        android:textSize="20dp"
-        app:hintTextAppearance = "@style/texto"
+        android:layout_marginTop="88dp"
+        android:background="@android:color/transparent"
         android:clickable="false"
         android:focusable="false"
-        android:maxLines="1"
         android:focusableInTouchMode="false"
+        android:maxLines="1"
+        android:text=""
+        android:textSize="20dp"
+        app:hintTextAppearance="@style/texto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toEndOf="@+id/textView21"
@@ -127,12 +128,24 @@
         android:id="@+id/btnEditarDatos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="124dp"
 
         android:text="EDITAR DATOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.858"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFoto" />
+
+    <TextView
+        android:id="@+id/textView31"
+        style="@style/texto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="CUENTA"
+        android:textSize="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
