--- a/app/src/main/res/layout/item_grupo.xml
+++ b/app/src/main/res/layout/item_grupo.xml
@@ -67,14 +67,16 @@
 
         <Button
             android:id="@+id/btnTest"
-            android:layout_width="64dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="24dp"
-            android:text="B"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="149dp"
+            android:layout_height="132dp"
+            android:layout_marginTop="4dp"
+            android:text=""
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.252"
-            app:layout_constraintStart_toEndOf="@+id/descripcionGrupo"
-            app:layout_constraintTop_toBottomOf="@+id/nombreGrupo" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
